<resources>
    <string name="app_name"> MyWeather </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="ultraviolet">Ultra violet</string>
    <string name="visibility">Visibility</string>
    <string name="hint_search">search for place </string>
    <string name="addtofav">Add</string>
    <string name="radio_Gps">GPS</string>
    <string name="radio_Map">Map</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="units">Units</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="standard">Standard ( Kelvin - metre/sec )</string>
    <string name="metric">Metric ( Celsius - metre/sec )</string>
    <string name="imperial">Imperial ( Fahrenheit - miles/hour)</string>
    <string name="save">Save</string>
    <string name="answer_no">NO,GO BACK</string>
    <string name="answer_yes">YES,I\'M SURE</string>
    <string name="dialog_message">You will lose it from your favourite  locations list</string>
    <string name="dialog_title">Wait ! Are You Sure You Want To Delete This location ?</string>
    <string name="remove_fav">Removed from your favorite list</string>
    <string name="choose_location">please choose your location</string>
    <string name="loading">Loading............</string>
    <string name="no_internet">No internet connection , Try to reconnect</string>
    <string name="no_fav_found">No favorite locations found</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alert_dialog_message">you will lose it from your stored alert list</string>
    <string name="alert_dialog_title">Wait ! are you sure you want to delete this alert from your list ?</string>
    <string name="remove_alert">Removed from your alert list</string>
    <string name="no_alert_found">No saved Alerts found</string>
    <string name="alert_notif_title">Weather Alert</string>
    <string name="dimiss">Dismiss</string>
    <string name="alert_dialogg_message">Weather is fine , no alerts for the scheduled time period</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="api_error">An Expected Error happen,Please try again later</string>
    <string name="unknown">unknown place</string>
    <string name="fields_empty">You must fill all fields for date and time</string>
    <string name="alert_type_empty">You must choose type of alert</string>
    <string name="passed_date">Please enter a vaid start and end date both must start from today</string>
</resources>