<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape">>

        <!-- TODO: Update blank fragment layout -->


        <Button
            android:id="@+id/floatingDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/medium_purple"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alertTypeGroup" />

        <TextView
            android:id="@+id/date_from"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/searchbackground"
            android:drawableEnd="@drawable/baseline_calendar_month_24"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="dd_mm_yy"
            app:layout_constraintEnd_toStartOf="@+id/date_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_to"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/searchbackground"
            android:drawableEnd="@drawable/baseline_calendar_month_24"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="dd_mm_yy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hour_from"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/searchbackground"
            android:drawableEnd="@drawable/baseline_access_alarm_24"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="00:00"
            app:layout_constraintEnd_toStartOf="@+id/hour_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/hour_to"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/searchbackground"
            android:drawableEnd="@drawable/baseline_access_alarm_24"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="00:00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_to" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_from" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/date_to" />

        <RadioGroup
            android:id="@+id/alertTypeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hour_to"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:buttonTint="@color/medium_purple"
                />

            <RadioButton
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:buttonTint="@color/medium_purple"
                />
        </RadioGroup>

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exit_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>